# robotic-arm

./: .gitignore  fuckmylife.py
.github/workflows/: ruff.yml
gui/: package-lock.json  package.json
gui/src/: App.js  index.css
gui/src/components/: AM_controller.js  ArmModel.js  Arm_Manuel_Controls.js
react-app/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
react-app/public/RoboticArm/meshes/: Link2.STL  Link3.STL  Link4.STL  Link5.STL  Link6.STL  base_link.STL
react-app/public/RoboticArm/urdf/: RoboticArm.csv  RoboticArm.urdf
react-app/public/RoboticArmv2/: CMakeLists.txt  package.xml
react-app/public/RoboticArmv2/launch/: display.launch  gazebo.launch
react-app/public/RoboticArmv2/urdf/: RoboticArmv2.csv  RoboticArmv2.urdf
react-app/public/camera_end_effector/: CMakeLists.txt  package.xml
react-app/public/camera_end_effector/config/: joint_names_camera_end_effector.yaml
react-app/public/camera_end_effector/launch/: display.launch  gazebo.launch
react-app/public/camera_end_effector/meshes/: base_link.STL  endeff.STL  j2.STL  j3.STL  j4.STL  j5.STL  j6.STL
react-app/public/camera_end_effector/urdf/: camera_end_effector.csv  camera_end_effector.urdf
react-app/public/camera_end_effector_v2/: CMakeLists.txt  package.xml
react-app/public/camera_end_effector_v2/launch/: display.launch  gazebo.launch
react-app/public/camera_end_effector_v2/meshes/: base_link.STL  ef.STL  j2.STL  j3.STL  j4.STL  j5.STL  j6.STL
react-app/public/gripper_end_effector/: CMakeLists.txt  package.xml
react-app/public/model/: abdi.urdf
react-app/src/: App.tsx  index.css
react-app/src/components/: MultiCameraViewer.tsx  model.tsx  scratch.tsx
ros2_ws/: requirements.txt
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/log/: latest_build
ros2_ws/src/camera-system/camera_manager/: package.xml  setup.py
ros2_ws/src/camera-system/camera_manager/camera_manager/: camera_manager.py
ros2_ws/src/communications-system/http_server/: package.xml  setup.cfg  setup.py
ros2_ws/src/communications-system/http_server/http_server/: http_server.py
ros2_ws/src/communications-system/http_server/http_server/routes/: admin_api.py  websocket.py
ros2_ws/src/communications-system/http_server/test/: test_comms.py
ros2_ws/src/desired_pose_processor/: package.xml  setup.cfg  setup.py
ros2_ws/src/interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/interfaces/msg/: WebRTCMessage.msg
ros2_ws/src/interfaces/srv/: AddIceCandidate.srv  RemovePeer.srv  RequestStream.srv  SetAnswer.srv
ros2_ws/src/joint_angle_processor/: package.xml  setup.cfg  setup.py
ros2_ws/src/launch_data_pipeline/: package.xml  setup.cfg  setup.py
(+53 files in other folders)
