<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_manager</name>
  <version>0.0.0</version>
  <description>This package is responsible for launching different camera streams and sending them to the client via WebRTC Protocol</description>
  <maintainer email="karanpreet.singh.raja@gmail.com">Karanpreet Raja</maintainer>
  <license>GNU General Public License v3.0</license>

  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
